--- a/nav_top.html
+++ b/nav_top.html
@@ -46,6 +46,11 @@
             }
             #content #nav_top .nav .nav_link {
                 padding: 0 8px;
+                height: 100%;
+            }
+            #content #nav_top .nav .nav_link a{
+                display: block;
+                height: 40px;
             }
             #content #nav_top .nav .nav_link:hover {
                 background: rgba(255,255,255,0.6);
@@ -78,19 +83,42 @@
                 height:32px;
                 border-radius: 50%;
             }
+
+            /*游戏中心*/
+            #content #nav_top #nav_lt .nav_link.game {
+                position: relative;
+            }
+            #content #nav_top #nav_lt .nav_link.game .i-frame{
+                position: absolute;
+                top: 40px;left: 0;
+            }
+
+            /*原本打算使用css设置二级菜单的动画效果
+            @keyframes fadeIn {*/
+                /*from {top: 60px;opacity: 0}*/
+                /*to {top: 40px;opacity: 1}*/
+            /*}*/
+            /*#content #nav_top #nav_lt .nav_link.game .slide-fade-enter {*/
+                /*animation: fadeIn 3s;*/
+            /*}*/
         </style>
     </head>
     <body>
         <div id="content">
             <nav id="nav_top">
                 <div class="nav lt" id="nav_lt">
-                    <div class="nav_link lt mainSite hasIcon"><img class="icon main" src="icon/wf_B站.svg" ></img><a href="">主站</a></div>
+                    <div class="nav_link lt mainSite hasIcon"><img class="icon main" src="img/icon/wf_B站.svg" ></img><a href="">主站</a></div>
                     <div class="nav_link lt"><a href="">画友</a></div>
                     <div class="nav_link lt"><a href="">音频</a></div>
-                    <div class="nav_link lt"><a href="">游戏中心</a></div>
+                    <div class="nav_link lt game">
+                        <a href="">游戏中心</a>
+                        <div class="i-frame" style="width:680px;height: 260px;display: none">
+                            <iframe src="iframe_gameCenter.html" frameborder="0" width="100%" height="100%"></iframe>
+                        </div>
+                    </div>
                     <div class="nav_link lt"><a href="">直播</a></div>
                     <div class="nav_link lt"><a href="">会员购</a></div>
-                    <div class="nav_link lt hasIcon"><img src="icon/手机.svg" class="icon tel" alt=""><a href="">下载app</a></div>
+                    <div class="nav_link lt hasIcon"><img src="img/icon/手机.svg" class="icon tel" alt=""><a href="">下载app</a></div>
                 </div>
                 <div class="nav rt" id="nav_rt">
                     <div class="lt nav_link" id="user">
@@ -106,9 +134,35 @@
                 </div>
             </nav>
         </div>
-
+        <script src="js/jquery.js"></script>
         <script>
-            
+            //二级菜单=>游戏中心
+            var timeIn= 0,
+                timeOut= 0;
+            let iframe= $(".i-frame"),
+                game_center= $(".nav_link.game");
+            game_center.mouseenter(function () {
+                clearTimeout(timeOut);
+                time= setTimeout(function () {
+                    iframe.css({
+                        display: 'block',
+                        opacity: 0,
+                        top: '46px'
+                    }).animate({top:`40px`, opacity: 1},200);
+                },500);
+            });
+            game_center.mouseleave(function () {
+                clearTimeout(timeIn);
+                iframe.animate({top: `46px`,opacity: 0},400);
+                timeOut= setTimeout(function () {
+                    iframe.css({display: 'none'})
+                },400)
+
+            });
+            // game_center.mouseleave(function () {
+            //     iframe.addClass('slide-fade-leave')
+            // })
+
         </script>
     </body>
 </html>
