--- a/iframe_gameCenter.html
+++ b/iframe_gameCenter.html
@@ -71,11 +71,11 @@
                 /*clear: both;*/
             /*}*/
             #gameCenter .game_box .game_bottom .game:hover {
-                opacity: 0.8;
-                background: #d3d6b0;
+                opacity: 0.9;
+                background: #e0e4f2;
             }
-            #gameCenter .game_box .game_bottom .game a {
-
+            #gameCenter .game_box .game_bottom .game:hover a {
+                    color: #6e83ef;
             }
 
             #gameCenter .game_box .game_bottom .game a img {
